# umps_uarm_hello_world

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hello.c  printprint.c  term.c  uarm.cmake  uarmmake  umps.cmake  umpsmake
include/: termprint.h
